Calling callback endpoint on job done, #1
